# gui-mcp

./: .gitignore  AGENTS.md  DESIGN.md  README.agent.md  README.md  llms.txt  pyproject.toml  setup.py
backend/: pyproject.toml
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/app/api/: contracts.py  execution.py  plans.py  reviews.py  runs.py  stream.py  tasks.py  utils.py
backend/app/services/: __init__.py  autonomy_policy.py  capability_registry.py  executor.py  plan_lifecycle.py  plan_validator.py  planner.py  review.py  scheduler.py  state_ledger.py  verifier.py
backend/tests/: conftest.py  helpers.py  test_api_integration.py  test_mvp_flow.py  test_persistence_and_ledger.py  test_policy_matrix.py  test_scheduler_edges.py
examples/: code_review_explainer.json  custom_editor.json  design_variant_grid.json  implementation_plan.json
examples/v0_2/: annotated_flowchart.json  component_variant_matrix.json  design_system_reference.json  module_map.json  pr_review_workspace.json  prompt_tuner.json  slide_deck.json  status_report.json  triage_board.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: DagCanvas.tsx  EventTimeline.tsx  ReviewPacket.test.tsx  ReviewPacket.tsx  StatusBadge.tsx  TaskInspector.test.tsx  TaskInspector.tsx
frontend/src/pages/: ContractPage.test.tsx  ContractPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  PlanEditorPage.test.tsx  PlanEditorPage.tsx  ReviewQueuePage.test.tsx  ReviewQueuePage.tsx  RunListPage.test.tsx  RunListPage.tsx
frontend/src/test/: fixtures.ts  setup.ts  test-utils.tsx
frontend/src/types/: domain.ts
gui-mcp/: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml  setup.py
gui-mcp/examples/: implementation_plan.json  research_report.json
gui-mcp/scripts/: render_example.py  render_gallery.py
gui-mcp/tests/: conftest.py  test_export.py  test_patch.py  test_render.py  test_schema.py  test_security.py  test_tools.py
scripts/: render_example.py  render_gallery.py  test_all.sh
src/gui2_artifact_mcp/: cli.py  mcp_resources.py  mcp_tools.py
src/web_gui_mcp/: __init__.py  cli.py  mcp_resources.py  mcp_tools.py  server.py
tests/: __init__.py  test_chromium_smoke.py  test_export.py  test_patch.py  test_render.py  test_schema.py  test_security.py  test_tools.py
(+56 files in other folders)
