[project]
name = "gui2-artifact-mcp-py"
version = "0.1.0"
description = "Python MCP server that renders GUI 2.0 ArtifactSpec JSON into deterministic HTML artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.9.0",
  "pydantic>=2.7",
]

[project.scripts]
gui2-artifact-mcp = "gui2_artifact_mcp.server:main"
gui2-artifact-mcp-py = "gui2_artifact_mcp.server:main"
gui2-render-example = "gui2_artifact_mcp.cli:render_example_main"

[dependency-groups]
dev = [
  "playwright>=1.45",
  "pytest>=8",
  "ruff>=0.5",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.45",
  "pytest>=8",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
