[project]
name = "web-gui-mcp"
version = "0.1.0"
description = "Python MCP server that renders Web GUI ArtifactSpec JSON into deterministic HTML artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.9.0",
  "pydantic>=2.7",
]

[project.scripts]
web-gui-mcp = "web_gui_mcp.server:main"
web-gui-render-example = "web_gui_mcp.cli:render_example_main"

[dependency-groups]
dev = [
  "playwright>=1.45",
  "pytest>=8",
  "ruff>=0.5",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.45",
  "pytest>=8",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
